--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -56,6 +56,7 @@ textarea.form-control {
 .card-user .avatar {
     object-fit: contain;
     background-color: white;
+    display: inline-block;
 }
 
 .border-gray {
@@ -84,7 +85,13 @@ textarea.form-control {
 }
 
 .card-user .image.full-height {
+    min-height: 100px;
     height: 100%;
+
+    img {
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
 }
 
 /* Column selector input in the Backend vertical navbar */
