--- a/Grow.Server/Areas/MyTeam/Views/Events/Closed.cshtml
+++ b/Grow.Server/Areas/MyTeam/Views/Events/Closed.cshtml
@@ -3,16 +3,15 @@
     ViewData["Title"] = "Can't respond to event";
 }
 
-<article id="main">
+<div class="text-center">
 
-    <header class="special container">
-        <span class="icon fa-calendar-o"></span>
-        <h2>Responses are not accepted</h2>
-    </header>
+    <h3>Responses are not accepted</h3>
 
-    <section class="wrapper style4 container" style="text-align: center">
-        <p>
-            You can't respond to the event "@Model.Name" right now!
-        </p>
-    </section>
-</article>
+    <p>
+        &nbsp;
+    </p>
+
+    <p>
+        You can't respond to the event "@Model.Name" right now!
+    </p>
+</div>
