--- a/Grow.Server/Areas/MyTeam/Views/Events/ResponseConfirmation.cshtml
+++ b/Grow.Server/Areas/MyTeam/Views/Events/ResponseConfirmation.cshtml
@@ -2,17 +2,19 @@
     ViewData["Title"] = "Event Response";
 }
 
-<article id="main">
+<div class="text-center">
 
-    <header class="special container">
-        <span class="icon fa-calendar-o"></span>
-        <h2>Response submitted</h2>
-    </header>
+    <h3>Response submitted</h3>
 
-    <section class="wrapper style4 container" style="text-align: center">
-        <p>
-            Your response has been submitted!<br />
-            Thank you for participating.
-        </p>
-    </section>
-</article>
+    <p>
+        &nbsp;
+    </p>
+
+    <p>
+        Your response has been submitted!<br />
+        Thank you for participating.
+    </p>
+    <p>
+        @Html.ActionLink("<- Back", "Index")
+    </p>
+</div>
