--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -80,11 +80,11 @@ textarea.form-control {
     font-style: italic;
 }
 
-.custom-file > *, .custom-file > *::after {
+.custom-file > *, .custom-file > *::after { /* Proper heights for custom file upload inputs (bootstrap-defined) */
     line-height: calc(1.4rem + 2px);
 }
 
-.card-user .image.full-height {
+.card-user .image.full-height { /* Using background images in user-cards (paper-dashboard) is suboptimal*/
     min-height: 100px;
     height: 100%;
 
@@ -92,6 +92,10 @@ textarea.form-control {
         border-bottom-left-radius: 0px;
         border-bottom-right-radius: 0px;
     }
+}
+
+.input-group button { /* Appended buttons in input groups (bootstrap-defined) are broken by paper-dashboard */
+    margin: 0px;
 }
 
 /* Column selector input in the Backend vertical navbar */
