--- a/Grow.Server/Areas/MyTeam/Views/Events/Index.cshtml
+++ b/Grow.Server/Areas/MyTeam/Views/Events/Index.cshtml
@@ -5,97 +5,96 @@
     ViewData["Title"] = "My Team";
     Layout = "Layouts/_BackendLayout";
 
-    var queries = new Dictionary<string, IOrderedEnumerable<TeamEventViewModel>>()
+    var queries = new List<(string, IOrderedEnumerable<TeamEventViewModel>, bool)>
     {
-        { "upcoming", Model.Where(e => e.Start >= DateTime.Now.Date).OrderBy(e => e.Start) },
-        { "past", Model.Where(e => e.Start < DateTime.Now.Date).OrderBy(e => e.Start) },
+        ( "past", Model.Where(e => e.Start < DateTime.Now.Date).OrderBy(e => e.Start), false ),
+        ( "upcoming", Model.Where(e => e.Start >= DateTime.Now.Date).OrderBy(e => e.Start), true ),
     };
-    var first = true;
 }
 
-<div class="row">
-    <div class="col-md-12" id="events">
+<p>
+    <input type="checkbox" data-toggle="collapse" data-target="#past-wrapper" role="button" aria-controls="past-wrapper" aria-expanded="false" />
+    Also show past events
+</p> 
 
-        @foreach (var pair in queries)
+@foreach (var (key, query, isShown) in queries)
+{
+    <div class="collapse @(isShown ? "show" : "")" id="@key-wrapper">
+
+        @foreach (var evnt in query)
         {
-            var key = pair.Key;
-            var query = pair.Value;
-
-            <div class="card" id="@key">
+            <div class="card" id="@evnt.Id">
                 <div class="card-header">
-                    <a href="#@key-body" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="@key-body">
-                        <h5 style="text-transform: capitalize">@key Events</h5>
-                    </a>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h5>@evnt.Name</h5>
+                        </div>
+                        <div class="col-sm-6 text-sm-right">
+                            <em>@evnt.Type</em>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <strong>@evnt.Location</strong><br />
+                            @evnt.Address
+                        </div>
+                        <div class="col-sm-6 text-sm-right">
+                            <strong>@evnt.Start.ToShortDateString()</strong>
+                            @if (evnt.HasTimesSet)
+                            {
+                                <br />
+                                @(evnt.Start.ToShortTimeString()) @:- @(evnt.End.ToShortTimeString())
+                            }
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body collapse @(first ? "show" : "")" id="@key-body" data-parent="#events">
-                    @{ 
-                        first = false;
-                    }
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Type)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Description)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Start)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Location)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Visibility)
-                                </th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @if (!query.Any())
+                <hr />
+                <div class="card-body row">
+                    <div class="col-md-12">
+                        @evnt.Description
+                    </div>
+                </div>
+                <hr />
+                <div class="card-footer row text-center">
+                    <div class="col-6 order-md-0 col-md-3">
+                        <h6>@Html.DisplayNameFor(model => model.Visibility)</h6>
+                        @evnt.Visibility
+                    </div>
+                    <div class="col-6 order-md-2 col-md-3">
+                        <h6>Need to register?</h6>
+                        @(evnt.CanTeamsRegister ? "Yes" : "No")
+                    </div>
+                    <div class="col-6 order-md-1 col-md-3">
+                        <h6>Mandatory?</h6>
+                        @(evnt.IsMandatory ? "Mandatory" : "Optional")
+                    </div>
+                    <div class="col-6 order-md-3 col-md-3">
+                        <h6>Registered?</h6>
+                        @if (!evnt.CanTeamsRegister)
+                        {
+                            @: -
+                        }
+                        else if (evnt.TeamResponse.HasValue)
+                        {
+                            @: Yes (with @evnt.TeamResponse.Value)
+                            @if (evnt.CanTeamRespondNow)
                             {
-                                <tr style="font-style: italic">
-                                    <td colspan="7">There are no @key events</td>
-                                </tr>
+                                <br />
+                                @Html.ActionLink("Change your Response", "Respond", "Events", new { id = evnt.Id })
                             }
-                            else
+                        }
+                        else
+                        {
+                            @: No
+                            @if (evnt.CanTeamRespondNow)
                             {
-                                @foreach (var item in query)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.ActionLink(item.Name, "Details", "Events", new { id = item.Id })
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Type)
-                                        </td>
-                                        <td title="@item.Description">
-                                            @item.Description.DynamicSubstring(50)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Start)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Location)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Visibility)
-                                        </td>
-                                        <td>
-                                            <a class="btn btn-primary" href="javascript:void(0)">...</a>
-                                        </td>
-                                    </tr>
-                                }
+                                <br />
+                                @Html.ActionLink("Respond now", "Respond", "Events", new { id = evnt.Id })
                             }
-                        </tbody>
-                    </table>
+                        }
+                    </div>
                 </div>
             </div>
         }
-
     </div>
-</div>
+}
